--- a/css/main.scss
+++ b/css/main.scss
@@ -12,29 +12,51 @@ body {
   max-width: 800px;
   box-shadow: -2px -1px 33px 3px rgba(56,56,56,0.52);
 }
-.cover158 {
+.cover-main {
   position: relative;
-  height: 29rem;
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.27) 93%,rgba(0,0,0,0.22) 100%), url('../img/2015/20150726.jpg');
-  background-size: cover;    
+  height: 18rem;
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.27) 93%,rgba(0,0,0,0.22) 100%), url('../img/logo-big-web-bg.png');
+  background-size: 100%;
+  background-repeat: no-repeat;
   background-position: 25% 75%;
-  h2 {
-    font-size: 1.5rem;
+  h1 {
+    font-size: 2.2rem;
+    font-size: 2.2rem;
     opacity: .8;
-    text-transform: uppercase;
     color: #FFF;
     font-family: Montserrat;
     position: absolute;
-    bottom: 1.5rem;
+    bottom: .5rem;
     left: 2.5rem;
   }
 }
 .description {
   background: whitesmoke;
   border-bottom: .1rem solid #CCC;
+  h3 {
+    padding: 1rem;
+    font-size: 1.2rem;
+  }
   p {
     padding: 1rem;
     line-height: 1.4;
+  }
+  button {
+    margin-left: auto;
+    margin-right: auto;
+    background: #3498db;
+    background-image: linear-gradient(to bottom, #3498db, #2980b9);
+    border-radius: 5px;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+    &:hover {
+      background: #3cb0fd;
+      background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+      text-decoration: none;
+    }
   }
 }
 .media {
@@ -82,6 +104,23 @@ a {
     &:focus {
       color: rgba(0, 95, 137, 0.83);
     }
+}
+.cover158 {
+  position: relative;
+  height: 29rem;
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.27) 93%,rgba(0,0,0,0.22) 100%), url('../img/2015/20150726.jpg');
+  background-size: cover;    
+  background-position: 25% 75%;
+  h2 {
+    font-size: 1.5rem;
+    opacity: .8;
+    text-transform: uppercase;
+    color: #FFF;
+    font-family: Montserrat;
+    position: absolute;
+    bottom: 1.5rem;
+    left: 2.5rem;
+  }
 }
 .cover157 {
   position: relative;
