--- a/index.haml
+++ b/index.haml
@@ -12,6 +12,16 @@
   %script{:src => "js/min/skrollr.js"}
   %script{:src => "js/min/app-min.js"}
 %body
+  %h1.logo
+    %img{:src => "img/kickarts-logo-new-icon.png", :alt => ""}/
+    .logo-title
+      %span.thin>KICK
+      %span.bold ARTS
+      %p.subtitle
+        Auckland's Comprehensive ArtShow.
+      %p.details
+        Every Sunday 8.35 | 104.6 FM
+    
   .entry
     .cover-main
       %h1
