--- a/css/main.css
+++ b/css/main.css
@@ -14,10 +14,12 @@ body {
   box-shadow: -2px -1px 33px 3px rgba(56, 56, 56, 0.52); }
 
 .logo {
+  max-width: 800px;
   font-family: 'Exo 2', sans-serif;
   color: #fff;
   font-size: 4rem;
-  margin: 2rem 0 0 4rem; }
+  margin: 5rem auto;
+  position: relative; }
   .logo .logo-title {
     display: inline-block;
     vertical-align: middle;
@@ -35,24 +37,6 @@ body {
   .logo img {
     display: inline-block;
     vertical-align: middle; }
-
-.cover-main {
-  position: relative;
-  height: 18rem;
-  background-image: -webkit-linear-gradient(top, transparent 0%, rgba(0, 0, 0, 0.27) 93%, rgba(0, 0, 0, 0.22) 100%), url("../img/logo-big-web-bg.png");
-  background-image: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.27) 93%, rgba(0, 0, 0, 0.22) 100%), url("../img/logo-big-web-bg.png");
-  background-size: 100%;
-  background-repeat: no-repeat;
-  background-position: 25% 75%; }
-  .cover-main h1 {
-    font-size: 2.2rem;
-    font-size: 2.2rem;
-    opacity: .8;
-    color: #FFF;
-    font-family: Montserrat;
-    position: absolute;
-    bottom: .5rem;
-    left: 2.5rem; }
 
 .description {
   background: whitesmoke;
