--- a/css/main.scss
+++ b/css/main.scss
@@ -5,7 +5,7 @@
 body {
   font-family: Roboto;
   background-image: url('../img/cover-pic.jpg');
-  background-size: cover;    
+  background-size: cover;
   background-attachment: fixed;
 }
 .entry {
@@ -14,10 +14,12 @@ body {
   box-shadow: -2px -1px 33px 3px rgba(56,56,56,0.52);
 }
 .logo {
+  max-width: 800px;
   font-family: 'Exo 2', sans-serif;
   color: #fff;
   font-size: 4rem;
-  margin: 2rem 0 0 4rem;
+  margin: 5rem auto;
+  position: relative;
   .logo-title {
     display: inline-block;
     vertical-align: middle;
@@ -41,24 +43,6 @@ body {
   img {
     display: inline-block;
     vertical-align: middle;
-  }
-}
-.cover-main {
-  position: relative;
-  height: 18rem;
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.27) 93%,rgba(0,0,0,0.22) 100%), url('../img/logo-big-web-bg.png');
-  background-size: 100%;
-  background-repeat: no-repeat;
-  background-position: 25% 75%;
-  h1 {
-    font-size: 2.2rem;
-    font-size: 2.2rem;
-    opacity: .8;
-    color: #FFF;
-    font-family: Montserrat;
-    position: absolute;
-    bottom: .5rem;
-    left: 2.5rem;
   }
 }
 .description {
@@ -105,7 +89,7 @@ body {
 .left-panel {
   position: absolute;
   bottom: 1.5rem;
-  left: 2.7rem  
+  left: 2.7rem
 }
 .right-panel {
   position: absolute;
@@ -124,7 +108,7 @@ a {
   color: rgba(0, 95, 137, 0.83);
   transition: all ease 300ms;
     &:hover {
-      color: rgb(0, 95, 137); 
+      color: rgb(0, 95, 137);
     }
     &:active {
         color: rgba(0, 95, 137, 0.83);
@@ -140,7 +124,7 @@ a {
   position: relative;
   height: 29rem;
   background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.27) 93%,rgba(0,0,0,0.22) 100%), url('../img/2015/20150726.jpg');
-  background-size: cover;    
+  background-size: cover;
   background-position: 25% 75%;
   h2 {
     font-size: 1.5rem;
@@ -157,7 +141,7 @@ a {
   position: relative;
   height: 29rem;
   background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.27) 93%,rgba(0,0,0,0.22) 100%), url('../img/2015/20150719.jpg');
-  background-size: cover;    
+  background-size: cover;
   background-position: 25% 75%;
   h2 {
     font-size: 1.5rem;
@@ -174,7 +158,7 @@ a {
   position: relative;
   height: 29rem;
   background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.27) 93%,rgba(0,0,0,0.22) 100%), url('../img/2015/20150712.jpg');
-  background-size: cover;    
+  background-size: cover;
   background-position: 25% 75%;
   h2 {
     font-size: 1.5rem;
@@ -191,7 +175,7 @@ a {
   position: relative;
   height: 29rem;
   background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.27) 93%,rgba(0,0,0,0.22) 100%), url('../img/2015/20150705.jpg');
-  background-size: cover;    
+  background-size: cover;
   background-position: 25% 75%;
   h2 {
     font-size: 1.5rem;
@@ -208,7 +192,7 @@ a {
   position: relative;
   height: 29rem;
   background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.27) 93%,rgba(0,0,0,0.22) 100%), url('../img/2015/20150628.jpg');
-  background-size: cover;    
+  background-size: cover;
   background-position: 25% 75%;
   h2 {
     font-size: 1.5rem;
@@ -225,7 +209,7 @@ a {
   position: relative;
   height: 29rem;
   background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.27) 93%,rgba(0,0,0,0.22) 100%), url('../img/2015/20150621.jpg');
-  background-size: cover;    
+  background-size: cover;
   background-position: 25% 75%;
   h2 {
     font-size: 1.5rem;
@@ -238,5 +222,3 @@ a {
     left: 2.5rem;
   }
 }
-
-
