--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,139 @@
+/*  Syntax Quick Reference
+  --------------------------
+  column($ratios: 1, $offset: 0, $cycle: 0, $uncycle: 0, $gutter: $jeet-gutter)
+  span($ratio: 1, $offset: 0)
+  shift($ratios: 0, $col_or_span: column, $gutter: $jeet-gutter)
+  unshift()
+  edit()
+  center($max_width: 1410px, $pad: 0)
+  stack($pad: 0, $align: false)
+  unstack()
+  align($direction: both)
+  cf()
+*/
+/**
+ * Grid settings.
+ * All values are defaults and can therefore be easily overidden.
+ */
+/**
+ * List functions courtesy of the wonderful folks at Team Sass.
+ * Check out their awesome grid: Singularity.
+ */
+/**
+ * Get  percentage from a given ratio.
+ * @param {number} [$ratio=1] - The column ratio of the element.
+ * @returns {number} - The percentage value.
+ */
+/**
+ * Work out the column widths based on the ratio and gutter sizes.
+ * @param {number} [$ratios=1] - The column ratio of the element.
+ * @param {number} [$gutter=$jeet-gutter] - The gutter for the column.
+ * @returns {list} $width $gutter - A list containing the with and gutter for the element.
+ */
+/**
+ * Get the set layout direction for the project.
+ * @returns {string} $direction - The layout direction.
+ */
+/**
+ * Replace a specified list value with a new value (uses built in set-nth() if available)
+ * @param {list} $list - The list of values you want to alter.
+ * @param {number} $index - The index of the list item you want to replace.
+ * @param {*} $value - The value you want to replace $index with.
+ * @returns {list} $list - The list with the value replaced or removed.
+ * @warn if an invalid index is supplied.
+ */
+/**
+ * Reverse a list (progressively enhanced for Sass 3.3)
+ * @param {list} $list - The list of values you want to reverse.
+ * @returns {list} $result - The reversed list.
+ */
+/**
+ * Get the opposite direction to a given value.
+ * @param {string} $dir - The direction you want the opposite of.
+ * @returns {string} - The opposite direction to $dir.
+ * @warn if an incorrect string is provided.
+ */
+/**
+ * Style an element as a column with a gutter.
+ * @param {number} [$ratios=1] - A width relative to its container as a fraction.
+ * @param {number} [$offset=0] - A offset specified as a fraction (see $ratios).
+ * @param {number} [$cycle=0] - Easily create an nth column grid where $cycle equals the number of columns.
+ * @param {number} [$uncycle=0] - Undo a previous cycle value to allow for a new one.
+ * @param {number} [$gutter=$jeet-gutter] - Specify the gutter width as a percentage of the containers width.
+ */
+/**
+ * An alias for the column mixin.
+ * @param [$args...] - All arguments get passed through to column().
+ */
+/**
+ * Get the width of a column and nothing else.
+ * @param {number} [$ratios=1] - A width relative to its container as a fraction.
+ * @param {number} [$gutter=$jeet-gutter] - Specify the gutter width as a percentage of the containers width.
+ */
+/**
+ * Get the gutter size of a column and nothing else.
+ * @param {number} [ratios=1] - A width relative to its container as a fraction.
+ * @param {number} [gutter=jeet.gutter] - Specify the gutter width as a percentage of the containers width.
+ */
+/**
+ * An alias for the column-width function.
+ * @param [$args...] - All arguments get passed through to column().
+ */
+/**
+ * An alias for the column-gutter function.
+ * @param [$args...] - All arguments get passed through to column().
+ */
+/**
+ * Style an element as a column without any gutters for a seamless row.
+ * @param {number} [$ratios=1] - A width relative to its container as a fraction.
+ * @param {number} [$offset=0] - A offset specified as a fraction (see $ratios).
+ * @param {number} [cycle=0] - Easily create an nth column grid where cycle equals the number of columns.
+ * @param {number} [uncycle=0] - Undo a previous cycle value to allow for a new one.
+ */
+/**
+ * Reorder columns without altering the HTML.
+ * @param {number} [$ratios=0] - Specify how far along you want the element to move.
+ * @param {string} [$col-or-span=column] - Specify whether the element has a gutter or not.
+ * @param {number} [$gutter=$jeet-gutter] - Specify the gutter width as a percentage of the containers width.
+ */
+/**
+ * Reset an element that has had shift() applied to it.
+ */
+/**
+ * View the grid and its layers for easy debugging.
+ * @param {string} [$color=black] - The background tint applied.
+ * @param {boolean} [$important=false] - Whether to apply the style as !important.
+ */
+/**
+ *  Alias for edit().
+ */
+/**
+ * Horizontally center an element.
+ * @param {number} [$max-width=1410px] - The max width the element can be.
+ * @param {number} [$pad=0] - Specify the element's left and right padding.
+ */
+/**
+ * Uncenter an element.
+ */
+/**
+ * Stack an element so that nothing is either side of it.
+ * @param {number} [$pad=0] - Specify the element's left and right padding.
+ * @param {boolean/string} [$align=false] - Specify the text align for the element.
+ */
+/**
+ * Unstack an element.
+ */
+/**
+ * Center an element on either or both axes.
+ * @requires A parent container with relative positioning.
+ * @param {string} [$direction=both] - Specify which axes to center the element on.
+ */
+/**
+ * Apply a clearfix to an element.
+ */
 @import url(http://fonts.googleapis.com/css?family=Roboto);
 @import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
-@import url(http://fonts.googleapis.com/css?family=Exo+2:400,300,500,700,600);
+@import url(http://fonts.googleapis.com/css?family=Exo+2:400,300,500,700,600,800);
 @import url(http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css);
 body {
   font-family: 'helvetica';
@@ -10,22 +143,113 @@ body {
   background-attachment: fixed;
   background-position: top right; }
 
+a {
+  color: #00BCD4;
+  text-decoration: none;
+  -webkit-transition: all 200ms ease;
+          transition: all 200ms ease; }
+  a:hover {
+    color: #008fa1; }
+
 header {
   padding-top: 0;
-  margin-top: 0;
-  height: 100vh; }
+  margin-top: 0; }
 
-.entry {
-  margin: 5rem auto;
-  max-width: 800px;
+.header-box {
+  *zoom: 1;
+  width: auto;
+  max-width: 960px;
+  float: none;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 5rem; }
+  .header-box:before, .header-box:after {
+    content: '';
+    display: table; }
+  .header-box:after {
+    clear: both; }
+
+.header-box-col {
+  *zoom: 1;
+  float: left;
+  clear: none;
+  text-align: inherit;
+  width: 31.3333333333%;
+  margin-left: 0%;
+  margin-right: 3%;
+  background: whitesmoke;
   box-shadow: -2px -1px 33px 3px rgba(56, 56, 56, 0.52); }
+  .header-box-col:before, .header-box-col:after {
+    content: '';
+    display: table; }
+  .header-box-col:after {
+    clear: both; }
+  .header-box-col:last-child {
+    margin-right: 0%; }
+  @media (max-width: 640px) {
+    .header-box-col {
+      display: block;
+      clear: both;
+      float: none;
+      width: 100%;
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 1rem; }
+      .header-box-col:first-child {
+        margin-left: auto; }
+      .header-box-col:last-child {
+        margin-right: auto; } }
+  .header-box-col p {
+    padding: .9rem;
+    line-height: 1.3rem;
+    font-size: .85rem; }
+
+.card-title {
+  color: whitesmoke;
+  padding: 4rem 1rem 1rem 1rem; }
+  .card-title h3 {
+    font-family: 'Exo 2', sans-serif;
+    font-weight: 800;
+    text-transform: uppercase;
+    font-size: 1.3rem;
+    display: inline;
+    letter-spacing: .15rem; }
+
+.card-icon {
+  float: right;
+  display: inline;
+  font-size: 4rem;
+  margin-top: -2.3rem; }
+
+.emerald {
+  background-color: #50BA6F; }
+
+.blue {
+  background-color: #3D97D3; }
+
+.purple {
+  background-color: #955CA5; }
+
+.card-body {
+  border-bottom: .1rem solid #CCC; }
+
+.card-action {
+  padding: 0.9rem; }
+  .card-action a {
+    font-family: 'Exo 2', sans-serif;
+    font-weight: 800;
+    text-transform: uppercase; }
 
 .logo {
   max-width: 800px;
   font-family: 'Exo 2', sans-serif;
   color: #fff;
   font-size: 4rem;
-  margin: 5rem auto;
+  margin: 0 auto;
+  padding-top: 5rem;
   position: relative; }
   .logo .logo-title {
     display: inline-block;
@@ -44,6 +268,11 @@ header {
   .logo img {
     display: inline-block;
     vertical-align: middle; }
+
+.entry {
+  margin: 5rem auto;
+  max-width: 960px;
+  box-shadow: -2px -1px 33px 3px rgba(56, 56, 56, 0.52); }
 
 .description {
   background: whitesmoke;
@@ -101,20 +330,6 @@ header {
 
 .date {
   color: #999; }
-
-a {
-  text-decoration: none;
-  color: rgba(0, 95, 137, 0.83);
-  -webkit-transition: all ease 300ms;
-          transition: all ease 300ms; }
-  a:hover {
-    color: #005f89; }
-  a:active {
-    color: rgba(0, 95, 137, 0.83); }
-  a:visited {
-    color: rgba(0, 95, 137, 0.83); }
-  a:focus {
-    color: rgba(0, 95, 137, 0.83); }
 
 .cover158 {
   position: relative;
