--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,10 @@
+@import 'jeet/index';
+@import 'breakpoint/breakpoint';
+@import 'variables';
+// @include edit ();
 @import url(http://fonts.googleapis.com/css?family=Roboto);
 @import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
-@import url(http://fonts.googleapis.com/css?family=Exo+2:400,300,500,700,600);
+@import url(http://fonts.googleapis.com/css?family=Exo+2:400,300,500,700,600,800);
 @import url(http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css);
 body {
   font-family: 'helvetica';
@@ -10,22 +14,84 @@ body {
   background-attachment: fixed;
   background-position: top right;
 }
+a {
+  color: $link;
+  text-decoration: none;
+  transition: all 200ms ease;
+  &:hover {
+    color: darken($link, 10%);
+  }
+}
+
+//HEADER
+
 header {
   padding-top: 0;
   margin-top: 0;
-  height: 100vh;
 }
-.entry {
-  margin: 5rem auto;
-  max-width: 800px;
+.header-box {
+  @include center(960px);
+  padding-top: 5rem;
+}
+.header-box-col {
+  @include column(1/3);
+  @include breakpoint($small) {
+    @include stack();
+    margin-top: 1rem;
+  }
+  background: whitesmoke;
   box-shadow: -2px -1px 33px 3px rgba(56,56,56,0.52);
+  p{
+    padding: .9rem;
+    line-height: 1.3rem;
+    font-size: .85rem;
+  }
+}
+.card-title {
+  color: whitesmoke;
+  padding: 4rem 1rem 1rem 1rem;
+  h3 {
+    font-family: 'Exo 2', sans-serif;
+    font-weight: 800;
+    text-transform: uppercase;
+    font-size: 1.3rem;
+    display: inline;
+    letter-spacing: .15rem;
+  }
+}
+.card-icon {
+  float: right;
+  display: inline;
+  font-size: 4rem;
+  margin-top: -2.3rem;
+}
+.emerald {
+  background-color: #50BA6F;
+}
+.blue {
+  background-color: #3D97D3;
+}
+.purple {
+  background-color: #955CA5;
+}
+.card-body {
+  border-bottom: .1rem solid #CCC;
+}
+.card-action {
+  padding: 0.9rem;
+  a {
+    font-family: 'Exo 2', sans-serif;
+    font-weight: 800;
+    text-transform: uppercase;
+  }
 }
 .logo {
   max-width: 800px;
   font-family: 'Exo 2', sans-serif;
   color: #fff;
   font-size: 4rem;
-  margin: 5rem auto;
+  margin: 0 auto;
+  padding-top: 5rem;
   position: relative;
   .logo-title {
     display: inline-block;
@@ -51,6 +117,14 @@ header {
     display: inline-block;
     vertical-align: middle;
   }
+}
+
+//ENTRIES
+
+.entry {
+  margin: 5rem auto;
+  max-width: 960px;
+  box-shadow: -2px -1px 33px 3px rgba(56,56,56,0.52);
 }
 .description {
   background: whitesmoke;
@@ -111,23 +185,10 @@ header {
 .date {
   color: #999;
 }
-a {
-  text-decoration: none;
-  color: rgba(0, 95, 137, 0.83);
-  transition: all ease 300ms;
-    &:hover {
-      color: rgb(0, 95, 137);
-    }
-    &:active {
-        color: rgba(0, 95, 137, 0.83);
-    }
-    &:visited {
-      color: rgba(0, 95, 137, 0.83);
-    }
-    &:focus {
-      color: rgba(0, 95, 137, 0.83);
-    }
-}
+
+
+// COVERS
+
 .cover158 {
   position: relative;
   height: 29rem;
