--- a/index.haml
+++ b/index.haml
@@ -9,6 +9,7 @@
     %link{:href => "img/apple-touch-icon-precomposed.png", :rel => "apple-touch-icon-precomposed"}/
     %script{:src => "js/min/modernizr.js"}
     %script{:src => "js/min/jquery-1.11.3.min.js"}
+    %script{:src => "js/min/match-height.js", :type => "text/javascript"}
     %script{:src => "js/min/skrollr.js"}
     %script{:src => "js/min/app-min.js"}
   %body
@@ -23,29 +24,36 @@
           %p.details
             Every Sunday 8.35 | 104.6 FM
       .header-box
-        %p
-          KickArts is Auckland's weekly comprehensive art show, live every Sunday night at 8.35pm on 104.6 FM (Auckland only). You can also stream us on planetaudio.org.nz.
-      .header-box
-        %p
-          The marvels of technology! 5 minutes after we are off air the latest episode is available for you to enjoy. A couple of days later it will appear in our archive so that you can listen to it over and over again. Download it as an MP3 and send it to your friends – or your enemies!
-      .header-box
-        %p
-          If you have missed an episode don't worry. Down here you can check out our last 6 episodes or if you feel like to listen to some vintage episodes just visit our Archives.      
-    .entry
-      .description
-        %p
-          KickArts is Auckland's weekly comprehensive art show, live every Sunday night at 8.35pm on 104.6 FM (Auckland only). You can also stream us on planetaudio.org.nz.
-        %h3
-          Our latest episode...
-        %p
-          The marvels of technology! 5 minutes after we are off air the latest episode is available for you to enjoy. A couple of days later it will appear in our archive so that you can listen to it over and over again. Download it as an MP3 and send it to your friends – or your enemies!
-        %p
-          %button{:type => "button"}
-            Listen here
-        %h3
-          Missed an episode?
-        %p
-          If you have missed an episode don't worry. Down here you can check out our last 6 episodes or if you feel like to listen to some vintage episodes just visit our Archives.
+        .header-box-col
+          .card-title.emerald
+            %h3
+              Live Shows
+            .card-icon
+              .fa.fa-bolt
+          .card-body.box-height
+            %p KickArts is Auckland's weekly comprehensive art show, live every Sunday night at 8.35pm on 104.6 FM (Auckland only). You can also stream us on <a href="http://www.planetaudio.org.nz/languages">planetaudio.org.nz</a>.
+          .card-action
+            %a{:href => "http://www.planetaudio.org.nz/ab/index.php", :target => '_blank'}Listen here
+        .header-box-col
+          .card-title.blue
+            %h3
+              Weekly Stream
+            .card-icon
+              .fa.fa-rss
+          .card-body.box-height
+            %p The marvels of technology! 5 minutes after we are off air the latest episode is available for you to enjoy. A couple of days later it will appear in our archive so that you can listen to it over and over again. Download it as an MP3 and send it to your friends – or your enemies!
+          .card-action
+            %a{:href => "http://www.planetaudio.org.nz/kickarts/player", :target => '_blank'}Stream here
+        .header-box-col
+          .card-title.purple
+            %h3
+              Archive
+            .card-icon
+              .fa.fa-archive
+          .card-body.box-height
+            %p If you have missed an episode don't worry. Down here you can check out our last 6 episodes or if you feel like to listen to some vintage episodes just visit our Archives.
+          .card-action
+            %a{:href => "#"}Browse archive
     .entry
       .cover158
         %h2
