--- a/css/main.css
+++ b/css/main.css
@@ -172,7 +172,7 @@ header {
   .header-box:after {
     clear: both; }
 
-.header-box-col {
+.header-box-col-3 {
   *zoom: 1;
   float: left;
   clear: none;
@@ -182,15 +182,15 @@ header {
   margin-right: 3%;
   background: whitesmoke;
   box-shadow: -2px -1px 33px 3px rgba(56, 56, 56, 0.52); }
-  .header-box-col:before, .header-box-col:after {
+  .header-box-col-3:before, .header-box-col-3:after {
     content: '';
     display: table; }
-  .header-box-col:after {
+  .header-box-col-3:after {
     clear: both; }
-  .header-box-col:last-child {
+  .header-box-col-3:last-child {
     margin-right: 0%; }
   @media (max-width: 640px) {
-    .header-box-col {
+    .header-box-col-3 {
       display: block;
       clear: both;
       float: none;
@@ -198,11 +198,63 @@ header {
       margin-left: auto;
       margin-right: auto;
       margin-top: 1rem; }
-      .header-box-col:first-child {
+      .header-box-col-3:first-child {
         margin-left: auto; }
-      .header-box-col:last-child {
+      .header-box-col-3:last-child {
         margin-right: auto; } }
-  .header-box-col p {
+  .header-box-col-3 p {
+    padding: .9rem;
+    line-height: 1.3rem;
+    font-size: .85rem; }
+
+.header-box-2 {
+  *zoom: 1;
+  width: auto;
+  max-width: 960px;
+  float: none;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 1.5rem; }
+  .header-box-2:before, .header-box-2:after {
+    content: '';
+    display: table; }
+  .header-box-2:after {
+    clear: both; }
+
+.header-box-col-2 {
+  *zoom: 1;
+  float: left;
+  clear: none;
+  text-align: inherit;
+  width: 48.5%;
+  margin-left: 0%;
+  margin-right: 3%;
+  background: whitesmoke;
+  box-shadow: -2px -1px 33px 3px rgba(56, 56, 56, 0.52); }
+  .header-box-col-2:before, .header-box-col-2:after {
+    content: '';
+    display: table; }
+  .header-box-col-2:after {
+    clear: both; }
+  .header-box-col-2:last-child {
+    margin-right: 0%; }
+  @media (max-width: 640px) {
+    .header-box-col-2 {
+      display: block;
+      clear: both;
+      float: none;
+      width: 100%;
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 1rem; }
+      .header-box-col-2:first-child {
+        margin-left: auto; }
+      .header-box-col-2:last-child {
+        margin-right: auto; } }
+  .header-box-col-2 p {
     padding: .9rem;
     line-height: 1.3rem;
     font-size: .85rem; }
@@ -232,6 +284,12 @@ header {
 
 .purple {
   background-color: #955CA5; }
+
+.green-sea {
+  background-color: #15A086; }
+
+.alizarin {
+  background-color: #E64D3C; }
 
 .card-body {
   border-bottom: .1rem solid #CCC; }
