--- a/index.haml
+++ b/index.haml
@@ -61,7 +61,7 @@
               Our team
             .card-icon
               .fa.fa-users
-          .card-body-box-height
+          .card-body.box-height
             %p
               Find out who is behind the microphone, their background, story and juicy gossip... you wish.
           .card-action
@@ -72,7 +72,7 @@
               Contact us
             .card-icon
               .fa.fa-map-marker
-          .card-body-box-height
+          .card-body.box-height
             %p
               All the necessary details to get in touch with us: email, social media and instructions how to reach our studio.
           .card-action
