--- a/index.haml
+++ b/index.haml
@@ -13,6 +13,23 @@
     %script{:src => "js/min/skrollr.js"}
     %script{:src => "js/min/app-min.js"}
   %body
+    .top-bar
+      &nbsp;
+    %nav
+      %h1
+        .nav-logo
+        .nav-title
+          KickArts.org.nz
+      %ul
+        %li
+          %a{:href => "#"}
+            Latest shows
+        %li
+          %a{:href => "#"}
+            Our Team
+        %li
+          %a{:href => "#"}
+            Contact us
     %header
       %h1.logo
         %img{:src => "img/kickarts-logo-new-icon.png", :alt => ""}/
