--- a/css/main.scss
+++ b/css/main.scss
@@ -25,7 +25,37 @@ a {
 
 // NAVIGATION
 
-
+nav {
+  opacity: .90;
+  position: fixed;
+  font-size: .8rem;
+  top: 0;
+  z-index: 1000;
+  height: 3.4rem;
+  width: 100%;
+  .nav-title {
+    display: inline-block;
+    vertical-align: middle;
+  }
+  ul {
+    position: absolute;
+    right: 1rem;
+    top: 0;
+  }
+  li {
+    display: inline;
+    line-height: 4rem;
+    text-transform: uppercase;
+  }
+}
+.top-bar {
+  height: 5rem;
+  position: fixed;
+  top: -1rem;
+  width: 100%;
+  z-index: 200;
+  background-color: whitesmoke;
+}
 
 //HEADER
 
