--- a/css/main.css
+++ b/css/main.css
@@ -162,14 +162,32 @@ nav {
   nav .nav-title {
     display: inline-block;
     vertical-align: middle; }
+  nav a {
+    color: #3e3e3e; }
+  nav h1 {
+    font-family: 'Exo 2', sans-serif;
+    font-weight: 800;
+    text-transform: uppercase;
+    font-size: 2rem;
+    color: #3e3e3e; }
   nav ul {
     position: absolute;
-    right: 1rem;
+    right: 3rem;
     top: 0; }
   nav li {
+    font-family: 'Exo 2', sans-serif;
+    font-weight: 400;
     display: inline;
     line-height: 4rem;
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    font-size: 1rem;
+    padding-right: .9rem; }
+    nav li a {
+      padding-bottom: .95rem; }
+      nav li a:hover {
+        border-bottom: .5rem solid #955CA5; }
+      nav li a:active {
+        border-bottom: .5rem solid #955CA5; }
 
 .top-bar {
   height: 5rem;
@@ -178,6 +196,14 @@ nav {
   width: 100%;
   z-index: 200;
   background-color: whitesmoke; }
+
+.nav-logo {
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+  padding: .3rem .3rem .3rem 3rem; }
+  .nav-logo img {
+    height: 3.5rem; }
 
 header {
   padding-top: 0;
