--- a/index.haml
+++ b/index.haml
@@ -16,13 +16,17 @@
     .top-bar
       &nbsp;
     %nav
-      %h1
-        .nav-logo
-        .nav-title
-          KickArts.org.nz
+      %a{:href => "#header"}
+        %h1
+          .nav-logo
+            %img{:src => "img/kickarts-logo-new-icon.png", :alt => ""}/
+          .nav-title
+            %span{:style => "font-weight: 400"}>Kick
+            Arts
+            %span{:style => "font-weight: 400"}>.org.nz
       %ul
         %li
-          %a{:href => "#"}
+          %a{:href => "#latest-show"}
             Latest shows
         %li
           %a{:href => "#"}
@@ -30,7 +34,10 @@
         %li
           %a{:href => "#"}
             Contact us
-    %header
+        %li
+          %a{:href => "#"}
+            Archive
+    %header#header
       %h1.logo
         %img{:src => "img/kickarts-logo-new-icon.png", :alt => ""}/
         .logo-title
@@ -71,29 +78,7 @@
             %p If you have missed an episode don't worry. Down here you can check out our last 6 episodes or if you feel like to listen to some vintage episodes just visit our Archives.
           .card-action
             %a{:href => "#"}Browse archive
-      .header-box-2
-        .header-box-col-2
-          .card-title.green-sea
-            %h3
-              Our team
-            .card-icon
-              .fa.fa-users
-          .card-body.box-height
-            %p
-              Find out who is behind the microphone, their background, story and juicy gossip... you wish.
-          .card-action
-            %a{:href => "#"}More info
-        .header-box-col-2
-          .card-title.alizarin
-            %h3
-              Contact us
-            .card-icon
-              .fa.fa-map-marker
-          .card-body.box-height
-            %p
-              All the necessary details to get in touch with us: email, social media and instructions how to reach our studio.
-          .card-action
-            %a{:href => "#"}More info
+    #latest-show
     .entry
       .cover158
         %h2
@@ -196,3 +181,26 @@
           %p.date posted 21 June 2015
         .player
           %audio{:controls => "controls"}
+    .header-box-2
+      .header-box-col-2
+        .card-title.green-sea
+          %h3
+            Our team
+          .card-icon
+            .fa.fa-users
+        .card-body.box-height
+          %p
+            Find out who is behind the microphone, their background, story and juicy gossip... you wish.
+        .card-action
+          %a{:href => "#"}More info
+      .header-box-col-2
+        .card-title.alizarin
+          %h3
+            Contact us
+          .card-icon
+            .fa.fa-map-marker
+        .card-body.box-height
+          %p
+            All the necessary details to get in touch with us: email, social media and instructions how to reach our studio.
+        .card-action
+          %a{:href => "#"}More info
