--- a/css/main.css
+++ b/css/main.css
@@ -189,6 +189,9 @@ nav {
       nav li a:active {
         border-bottom: .5rem solid #955CA5; }
 
+.active {
+  border-bottom: .5rem solid #955CA5; }
+
 .top-bar {
   height: 5rem;
   position: fixed;
