--- a/index.haml
+++ b/index.haml
@@ -26,16 +26,16 @@
             %span{:style => "font-weight: 400"}>.org.nz
       %ul
         %li
-          %a{:href => "#latest-show"}
+          %a.menu-link{:href => "#latest-show"}
             Latest shows
         %li
-          %a{:href => "#"}
+          %a.menu-link{:href => "#"}
             Our Team
         %li
-          %a{:href => "#"}
+          %a.menu-link{:href => "#"}
             Contact us
         %li
-          %a{:href => "#"}
+          %a.menu-link{:href => "#"}
             Archive
     %header#header
       %h1.logo
