adds search icon in nav bar

--- a/index.haml
+++ b/index.haml
@@ -37,6 +37,9 @@
         %li
           %a.menu-link{:href => "#"}
             Archive
+        %li
+          %a.menu-link{:href => "#"}
+            .fa.fa-search    
     %header#header
       %h1.logo
         %img{:src => "img/kickarts-logo-new-icon.png", :alt => ""}/
