--- a/index.haml
+++ b/index.haml
@@ -39,7 +39,7 @@
             Archive
         %li
           %a.menu-link{:href => "#"}
-            .fa.fa-search    
+            .fa.fa-search
     %header#header
       %h1.logo
         %img{:src => "img/kickarts-logo-new-icon.png", :alt => ""}/
@@ -50,8 +50,8 @@
             Auckland's Comprehensive ArtShow.
           %p.details
             Every Sunday 8.35 | 104.6 FM
-      .header-box
-        .header-box-col-3
+      .box
+        .box-col-3
           .card-title.emerald
             %h3
               Live Shows
@@ -61,7 +61,7 @@
             %p KickArts is Auckland's weekly comprehensive art show, live every Sunday night at 8.35pm on 104.6 FM (Auckland only). You can also stream us on <a href="http://www.planetaudio.org.nz/languages">planetaudio.org.nz</a>.
           .card-action
             %a{:href => "http://www.planetaudio.org.nz/ab/index.php", :target => '_blank'}Listen here
-        .header-box-col-3
+        .box-col-3
           .card-title.blue
             %h3
               Weekly Stream
@@ -71,7 +71,7 @@
             %p The marvels of technology! 5 minutes after we are off air the latest episode is available for you to enjoy. A couple of days later it will appear in our archive so that you can listen to it over and over again. Download it as an MP3 and send it to your friends – or your enemies!
           .card-action
             %a{:href => "http://www.planetaudio.org.nz/kickarts/player", :target => '_blank'}Stream here
-        .header-box-col-3
+        .box-col-3
           .card-title.purple
             %h3
               Archive
@@ -81,6 +81,32 @@
             %p If you have missed an episode don't worry. Down here you can check out our last 6 episodes or if you feel like to listen to some vintage episodes just visit our Archives.
           .card-action
             %a{:href => "#"}Browse archive
+    #our-team
+      .box-2
+        .box-col-2
+          .card-title.green-sea
+            %h3
+              Richard Green
+            %p.team-description Host, Producer &amp; Reviewer
+            .card-img
+              %img{:src => "img/richard.jpg", :alt => ""}/
+          .card-body.box-height
+            %p
+              Find out who is behind the microphone, their background, story and juicy gossip... you wish.
+          .card-action
+            %a{:href => "#"}More info
+        .box-col-2
+          .card-title.green-sea
+            %h3
+              Enny Benzonelli
+            %p.team-description Co-Host, Co-Producer &amp; Reviewer
+            .card-img
+              %img{:src => "img/enny.jpg", :alt => ""}/
+          .card-body.box-height
+            %p
+              All the necessary details to get in touch with us: email, social media and instructions how to reach our studio.
+          .card-action
+            %a{:href => "#"}More info
     #latest-show
     .entry
       .cover158
@@ -184,8 +210,8 @@
           %p.date posted 21 June 2015
         .player
           %audio{:controls => "controls"}
-    .header-box-2
-      .header-box-col-2
+    .box-2
+      .box-col-2
         .card-title.green-sea
           %h3
             Our team
@@ -196,7 +222,7 @@
             Find out who is behind the microphone, their background, story and juicy gossip... you wish.
         .card-action
           %a{:href => "#"}More info
-      .header-box-col-2
+      .box-col-2
         .card-title.alizarin
           %h3
             Contact us
