--- a/css/main.css
+++ b/css/main.css
@@ -135,9 +135,6 @@
 @import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(http://fonts.googleapis.com/css?family=Exo+2:400,300,500,700,600,800);
 @import url(http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css);
-* {
-  background: rgba(0, 0, 0, 0.05); }
-
 body {
   font-family: 'helvetica';
   color: #3e3e3e;
@@ -396,6 +393,9 @@ header {
     font-family: 'Exo 2', sans-serif;
     font-weight: 800;
     text-transform: uppercase; }
+  .card-action li {
+    display: inline;
+    padding-right: 0.9rem; }
 
 .entry {
   margin: 5rem auto;
