adds riot.js script tag from cdn

--- a/index.haml
+++ b/index.haml
@@ -267,3 +267,4 @@
             All the necessary details to get in touch with us: email, social media and instructions how to reach our studio.
         .card-action
           %a{:href => "#"}More info
+  %script{:src => "https://cdnjs.cloudflare.com/ajax/libs/riot/2.2.4/riot+compiler.min.js"}        
